<resources>
    <string name="app_name">GOMaping</string>
    <string name="onboarding_next">Далее</string>
    <string name="onboarding_first_screen">От родителей родителям!</string>
    <string name="onboarding_second_screen">Детям будет интересно!</string>
    <string name="onboarding_third_screen">Локации, которые подходят именно вашей семье.</string>
    <string name="auth_title">Присоединяйся к GO˙MAPING</string>
    <string name="auth_description">Получай уведомления о выгодных предложениях и копи баллы на скидку</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="auth_forgot_password">Забыли пароль?</string>
    <string name="auth_sign_up">Регистрация</string>
    <string name="auth_log_in">Войти</string>
    <string name="auth_continue">Продолжить без регистрации</string>
    <string name="navigator">Навигатор для родителей</string>
    <string name="events">События и мероприятия</string>
    <string name="services">Услуги и объявления</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_nearby">Что рядом</string>
    <string name="menu_map">Карта</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_home">Главная</string>
    <string name="useful">Полезное</string>
    <string name="error_invalid_email">Пожалуйста, введите верный адрес электронной почты.</string>
    <string name="error_empty_password">Пожалуйста, введите пароль.</string>
    <string name="error_password_too_short">Пароль должен содержать минимум %1$d символов.</string>
    <string name="hint_map_search">Введите запрос</string>
    <string name="location_permission_denied">Не удалось определить ваше местоположение. Пожалуйста, разрешите доступ к местоположению в настройках приложения.</string>
    <string name="error_my_location">Не удалось определить ваше местопожение.</string>
    <string name="category_playground">Игровые площадки</string>
    <string name="category_food">Кафе</string>
    <string name="category_development">Развития\nКурсы</string>
    <string name="category_education">Детсады\nШколы</string>
    <string name="category_shop">Магазины</string>
    <string name="category_health">Аптеки\nПоликлиники</string>
    <string name="error_suggest">Во время поиска произошла ошибка.</string>
    <string name="error_connection">Не удалось совершить поиск. Проверьте ваше соединение с интернетом.</string>
    <string name="guest">Гость</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="profile_become_agent">Стать агентом</string>
    <string name="profile_menu_favourites">Избранное</string>
    <string name="profile_menu_notifications">Уведомления</string>
    <string name="profile_menu_public_offer">Публичная оферта</string>
    <string name="profile_menu_about_app">О приложении</string>
    <string name="profile_menu_support">Поддержка GoMaping</string>
    <string name="profile_menu_log_out">Выйти из аккаунта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_event">Цирк Никулина на цветном бульваре</string>
    <string name="image">Image</string>
    <string name="circus">Цирк</string>
    <string name="descriptions">Самый старый цирк в нашей стране, известный далеко за её пределами. Сильнейшие мастера....</string>
    <string name="schedule_event">Ежедневно 11:00 – 19:00</string>
    <string name="break_event">Перерыв 15:00 – 16:00</string>
    <string name="reviews_event">4.6</string>
    <string name="distance">10 км</string>
    <string name="car_time_event">20 мин</string>
    <string name="city">Москва</string>
    <string name="date">01.01.24</string>
    <string name="filter">Фильтры</string>
    <string name="recommendations">Рекомендации для Вас</string>
    <string name="button_view">Показать</string>

    <!-- Event Filter Main Menu-->
    <string name="event_rating">Рейтинг</string>
    <string name="event_age_group">Возрастная группа</string>
    <string name="event_exhibitions">Выставки</string>
    <string name="event_concerts">Концерты</string>
    <string name="event_theatre">Театры</string>
    <string name="event_festivals">Фестивали</string>
    <string name="event_sport">Спорт</string>
    <string name="choose_action">Выберите действие</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="to_share">Поделиться</string>
    <string name="to_hide">Скрыть</string>

    <string name="event_card_title">Событие</string>
    <string name="event_title">Фильтр: События и мероприятие</string>
    <string name="event_reviewer">Cтарый Московский цирк на Цветном бульваре один из самых старейших цирков России. Сто с лишним лет назад, в 1880 году, это здание на Цветном бульваре построила для цирка Альберта Саламонского контора купца Данилова. Говорят, первый рубль, вырученный за билет, Саламонский вставил в рамку и повесил в кассе. Когда 20 октября 1880 года цирк принял первых зрителей, там было пять рядов кресел, ложи, бельэтаж, вторые места с деревянными ненумерованными лавками и стоячая галерея. Потом здание не раз подстраивалось и достраивалось, но весь свой долгий век  служило цирку.</string>
    <string name="event_monday">Понедельник</string>
    <string name="event_time_start">11:00 – 19:00</string>
    <string name="event_tuesday">Вторник</string>
    <string name="event_wennesday">Среда</string>
    <string name="event_thursday">Четверг</string>
    <string name="event_friday">Пятница</string>
    <string name="event_saturday">Субботa</string>
    <string name="event_sunday">Воскресенье</string>
    <string name="event_break">Перерыв</string>
    <string name="event_time_break">13:00 – 14:00</string>
    <string name="leave_review">Оставить отзыв</string>
    <string name="total_event_count">100 отзывов</string>
    <string name="event_adress">Цветной бул., 13, Москва</string>
    <string name="event_adress_text">Адресс</string>
    <string name="event_email">mamspaps@gmaiil.com</string>
    <string name="event_support">Поддержка</string>
    <string name="event_link">circusnikulin.ru</string>
    <string name="event_lint_text">Сайт</string>
    <string name="event_price">1500₽ - 5000₽</string>
    <string name="event_price_text">Стоимость</string>

    <!-- Map Filter Main Menu-->
    <string name="map_filter_title">Фильтр: Игровая площадка</string>
    <string name="map_filter_equipment">Оборудование</string>
    <string name="map_filter_size">Размер</string>
    <string name="map_filter_toilet">Туалет</string>
    <string name="map_filter_canopy">Навес</string>
    <string name="map_filter_benches">Лавочки</string>
    <string name="map_filter_coverage">Покрытие</string>
    <string name="map_filter_equipment_mgn">Оборудование МГН</string>
    <string name="map_location">Игровая площадка</string>
    <string name="map_location_street">Арбатская, 34</string>
    <string name="map_location_description">Игровая площадка</string>
    <string name="map_location_distance">1.5км</string>
    <string name="map_location_reviews">110 отзывов</string>
    <string name="map_location_schedule">Круглосуточно</string>
    <string name="map_car_time_location">1 ч 59 мин</string>
    <string name="map_on_foot_location">1 ч 59 мин</string>
    <string name="map_bus_time_location">1 ч 59 мин</string>
    <string name="map_reviwer_location">Отличная площадка, правда, нa выходных очень много народа. Рядом, напротив москвариума Отличная площадка, правда, нa выходных очень много народа. Рядом, напротив москвариума Отличная площадка, правда, нa выходных очень много народа. Рядом, напротив москвариума Отличная площадка, правда, нa выходных очень много народа. Рядом, напротив москвариума Отличная площадка, правда, нa выходных очень много народа. Рядом, напротив москвариума</string>
    <string name="map_location_on_foot">14 мин 1.5км</string>
    <string name="profile_offers_text">1. Термины и определения</string>
    <string name="profile_offer_all_text">Разнообразный и богатый опыт говорит нам, что начало повседневной работы по формированию позиции способствует повышению качества как самодостаточных, так и внешне зависимых концептуальных решений. Не следует, однако, забывать, что дальнейшее развитие различных форм деятельности, в своём классическом представлении, допускает внедрение вывода текущих активов. Банальные, но неопровержимые выводы, а также базовые сценарии поведения пользователей описаны максимально подробно. Ясность нашей позиции очевидна: граница обучения кадров требует от нас анализа системы обучения кадров, соответствующей насущным потребностям. Предварительные выводы неутешительны: экономическая повестка сегодняшнего дня позволяет выполнить важные задания по разработке экономической целесообразности принимаемых решений. Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности создаёт предпосылки для прогресса профессионального сообщества. Внезапно, сделанные на базе интернет-аналитики выводы призывают нас к новым свершениям, которые, в свою очередь, должны быть ассоциативно распределены по отраслям. А также действия представителей оппозиции, превозмогая сложившуюся непростую экономическую ситуацию, ассоциативно распределены по отраслям. Наше дело не так однозначно, как может показаться: сложившаяся структура организации не даёт нам иного выбора, кроме определения прогресса профессионального сообщества. Но сплочённость команды профессионалов не даёт нам иного выбора, кроме определения анализа существующих паттернов поведения.</string>
    <string name="profile_about_app_text">Go Maping - это разнообразный и богатый опыт говорит нам, что начало повседневной работы по формированию позиции способствует повышению качества как самодостаточных, так и внешне зависимых концептуальных решений. \n\nНе следует, однако, забывать, что дальнейшее развитие различных форм деятельности, в своём классическом представлении, допускает внедрение вывода текущих активов.</string>
    <string name="profile_go_maping">©2024 Go Maping</string>
    <string name="profile_button_save">Сохранить</string>
    <string name="profile_birthday">Дата рождения</string>
    <string name="profile_phone">Телефон</string>
    <string name="profile_email">Почта</string>
    <string name="profile_city">Город</string>
    <string name="profile_name">Ваше имя</string>
    <string name="profile_add_photo">Добавить фото</string>
    <string name="profile_change_photo">Изменить фото</string>
    <string name="profile_delete_photo">Удалить фото</string>
</resources>
